--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,22 +1,22 @@
 {
     "name": "AccountaParts",
     "short_name": "AccountaParts",
-    "description": "A collaborative goal-tracking app",
+    "description": "Transform your goals into reality with accountability partners",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#ffffff",
+    "background_color": "#121212",
     "theme_color": "#007bff",
     "icons": [
         {
-            "src": "/static/img/icon-192.png",
+            "src": "/static/img/icon-192.svg",
             "sizes": "192x192",
-            "type": "image/png",
+            "type": "image/svg+xml",
             "purpose": "any maskable"
         },
         {
-            "src": "/static/img/icon-512.png",
+            "src": "/static/img/icon-512.svg",
             "sizes": "512x512",
-            "type": "image/png",
+            "type": "image/svg+xml",
             "purpose": "any maskable"
         }
     ]
